<resources>
    <string name="appName"> Calculadora B18</string>
    <string name="atrImgSplash">Img Splash</string>
    <string name="btnSplash">Bienvenido</string>
    <string name="descSplash">
        La ayuda necesaria para que \n
        puedas ser seleccionado en \n
        el proceso de Beca 18. </string>
    <string name="imgGuide"> Img Guide </string>
    <string name="dot">Dot Nav</string>
    <string name="arrow">Next</string>
    <string name="guideOne"><font color="#FEB686">Calculadora B18 </font>  toda la ayuda para que puedas ser seleccionado en el proceso de Beca 18. </string>
    <string name="guideTwo"> <font color="#FEB686">Calculadora Preseleccion </font> calcula y simula tu puntaje de preselección en Beca 18 2025. </string>
    <string name="guideThree"> <font color="#FEB686">Calculadora Seleccion </font> calcula y simula tu puntaje de seleccion en Beca 18 2025. </string>
    <string name="logoBeca">Beca 18</string>
    <string name="logoCal">Calculadoras</string>
    <string name="logoHome">Home</string>
    <string name="logoUser">User</string>
    <string name="post">Postular a Beca 18</string>
    <string name="calPre">Calculadora Preseleccion</string>
    <string name="calPreDesc">Simula aqui tu puntaje de preselección para beca 18</string>
    <string name="calSel">Calculadora Seleccion</string>
    <string name="calSelDesc">Simula aqui tu puntaje de selección para beca 18</string>
    <string name="homeDesc"> Aqui encontraras toda la ayuda necesaria para que puedas ser seleccionado en el proceso de Beca 18. La cual es una beca para que peruanos de buen rendimiento académico y de escasos recursos económicos estudien una carrera profesional, con todos los gastos cubiertos por el Estado. </string>
    <string name="nombreUno">Juan Manuel\nVolkmar Padierna</string>
    <string name="uniUno">UPB</string>
    <string name="nombreDos">Junior Segovia\nChalco</string>
    <string name="uniDos">UCS</string>

    <string name="preTitulo">Calculadora Preseleccion</string>
    <string name="nombreF">Tu Nombre Completo</string>
    <string name="modalidadF">(M) Modalidad de postulacion:</string>
    <string name="modalidadFH">Modalidad de postulacion</string>
    <string name="puntajeENPF">(ENP) Puntaje Examen Nac. de Preselec.</string>
    <string name="puntajeENPFH">Puntaje ENP (numero par 0-20)</string>
    <string name="SISFOH">(S) Clasificación SISFOH:</string>
    <string name="SISFOHHint">Clasificación SISFOH</string>
    <string name="quintF">(T) Quintil de la tasa de transición:</string>
    <string name="quintFH">Quintil de la tasa de transición</string>
    <string name="lengua">Lengua Originaria</string>

    <string name="actExt">Participación en Actividades Extracurriculares</string>
    <string name="actExtOpc1">(CE) Concurso Escolar Nacional (1°, 2º o 3º Puesto Etapa Nacional) o Concurso Escolar Internacional - 5 puntos</string>
    <string name="actExtOpc2">(CEP) Participación en la Etapa Nacional de los Concursos Escolares Nacionales - 2 puntos</string>
    <string name="actExtOpc3">(JD) Juegos Deportivos Escolares (1°, 2º o 3° puesto en Etapa Nacional) - 5 puntos</string>
    <string name="actExtOpc4">(JDP) Participación en la Etapa Nacional de los Juegos Deportivos Escolares Nacionales - 2 puntos</string>

    <string name="conPri">Otras condiciones priorizables </string>
    <string name="conPriOpc1">(D) Discapacidad - 5 puntos</string>
    <string name="conPriOpc2">(B) Bomberos activos e hijos de bomberos - 5 puntos</string>
    <string name="conPriOpc3">(V) Voluntarios reconocidos por el MIMP - 5 puntos</string>
    <string name="conPriOpc4">(IA) Pertenencia a Comunidad Nativa Amazónica o Población Afroperuana - 5 puntos</string>
    <string name="conPriOpc5">(PEM) Población expuesta a metales pesados y otras sustancias químicas - 5 puntos</string>
    <string name="conPriOpc6">(PD) Población beneficiaria (Res. Suprema Nº 264-2022-JUS) - 5 puntos</string>
    <string name="conPriOpc7">(OR) Población beneficiaria de la Ley N° 31405 (orfandad) - 5 puntos</string>
    <string name="conPriOpc8">(DF) Desprotección familiar - 5 puntos</string>
    <string name="conPriOpc9">(ACS) Agente Comunitario de Salud - 5 puntos</string>


</resources>