<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrePagThreeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_bg_top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="30dp"
                    android:text="@string/appName"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/preTitulo"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/conPri"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc6"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc7"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc8"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="10dp"
                    android:text="@string/conPriOpc9"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/gFPagOne"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_black" />

                        <ImageView
                            android:id="@+id/gFPagTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_black" />

                        <ImageView
                            android:id="@+id/gFPagThree"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_orange" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/nextPagF"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/arrow"
                        app:srcCompat="@drawable/check" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>