<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrePagOneActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/black_bg_top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="30dp"
                    android:text="@string/appName"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preTitulo"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="35dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombreF"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/modalitySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/modalidadF"
                        android:text="@string/modalidadFH"
                        android:inputType="none"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/eibOptionsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="25dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/eibLanguageSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lengua"
                            android:text="@string/lengua"
                            android:inputType="none"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="16sp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enpInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/puntajeENPF"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="25dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/sisfohSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/SISFOH"
                        android:text="@string/SISFOHHint"
                        android:inputType="none"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/departmentSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/quintF"
                        android:text="@string/quintFH"
                        android:inputType="none"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="25dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/gFPagOne"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_orange" />

                        <ImageView
                            android:id="@+id/gFPagTwo"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_black" />

                        <ImageView
                            android:id="@+id/gFPagThree"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dot"
                            app:srcCompat="@drawable/dot_black" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/nextPagF"
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="80dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/arrow"
                        app:srcCompat="@drawable/arrow" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>